<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:contentInsetStart="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_image"
                style="@style/icon"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username_text"
                style="@style/toolbar_title"
                android:text="@string/share_to"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/back_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/share_text"
                style="@style/toolbar_text"
                android:text="@string/share"
                android:textColor="@color/share_post"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:src="@drawable/photo_camera_24dp" />

        <ImageView
            android:id="@+id/post_image1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:src="@drawable/photo_camera_24dp" />

        <ImageView
            android:id="@+id/post_image2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:src="@drawable/photo_camera_24dp" />

        <ImageView
            android:id="@+id/post_image3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:src="@drawable/photo_camera_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="352dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/record_audio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Record Audio" />

        <Button
            android:id="@+id/pick_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pick Location" />

        <EditText
            android:id="@+id/caption_input"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/enter_a_caption_here" />
    </LinearLayout>
</LinearLayout>