<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileViewActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_text"
                style="@style/toolbar_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="user.name" />

            <ImageView
                android:id="@+id/settings_image"
                style="@style/icon"
                android:src="@drawable/ic_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/person"
        app:civ_border_color="@color/grey"
        app:civ_border_width="1dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/edit_profile_btn"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/posts_count_text"
        style="@style/profile_text_count"
        app:layout_constraintBottom_toTopOf="@id/edit_profile_btn"
        app:layout_constraintEnd_toEndOf="@id/posts_text"
        app:layout_constraintStart_toStartOf="@id/posts_text"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.3"
        tools:text="0" />

    <TextView
        android:id="@+id/posts_text"
        style="@style/profile_text"
        android:text="@string/posts"
        app:layout_constraintEnd_toStartOf="@id/followers_text"
        app:layout_constraintStart_toStartOf="@id/edit_profile_btn"
        app:layout_constraintTop_toBottomOf="@id/posts_count_text" />

    <TextView
        android:id="@+id/followers_count_text"
        style="@style/profile_text_count"
        app:layout_constraintBaseline_toBaselineOf="@id/posts_count_text"
        app:layout_constraintEnd_toEndOf="@id/followers_text"
        app:layout_constraintStart_toStartOf="@id/followers_text"
        tools:text="0" />

    <TextView
        android:id="@+id/followers_text"
        style="@style/profile_text"
        android:text="@string/followers"
        app:layout_constraintBaseline_toBaselineOf="@id/posts_text"
        app:layout_constraintEnd_toStartOf="@id/following_text"
        app:layout_constraintStart_toEndOf="@id/posts_text" />

    <TextView
        android:id="@+id/following_count_text"
        style="@style/profile_text_count"
        app:layout_constraintBaseline_toBaselineOf="@id/posts_count_text"
        app:layout_constraintEnd_toEndOf="@id/following_text"
        app:layout_constraintStart_toStartOf="@id/following_text"
        tools:text="0" />

    <TextView
        android:id="@+id/following_text"
        style="@style/profile_text"
        android:text="@string/following"
        app:layout_constraintBaseline_toBaselineOf="@id/posts_text"
        app:layout_constraintEnd_toEndOf="@id/edit_profile_btn"
        app:layout_constraintStart_toEndOf="@id/followers_text" />

    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_bg"
        android:minHeight="0dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/profile_image" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey">

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="674dp"
            android:layout_gravity="center"
            android:layout_marginTop="160dp">

        </android.support.v4.view.ViewPager>

    </FrameLayout>

    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/images_recycler"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:background="@drawable/top_border_grey"-->
        <!--app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"-->
        <!--app:layout_constraintTop_toBottomOf="@id/edit_profile_btn">-->

    <!--</android.support.v7.widget.RecyclerView>-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
